--- a/templates/pages/board.html
+++ b/templates/pages/board.html
@@ -458,6 +458,7 @@ function toggleBoxes() {
 <script src="/.static/js/hiding.js"></script>
 <script src="/.static/js/mediaHiding.js"></script>
 <script src="/.static/js/themes.js"></script>
+<script src="/.static/js/draggable.js"></script>
 <script src="/.static/js/watcher.js"></script>
 <script src="/.static/js/embed.js"></script>
 <script src="/.static/js/postingMenu.js"></script>
