--- a/templates/pages/thread.html
+++ b/templates/pages/thread.html
@@ -678,18 +678,11 @@ function toggleBoxes() {
 <script src="/.static/js/hiding.js"></script>
 <script src="/.static/js/mediaHiding.js"></script>
 <script src="/.static/js/themes.js"></script>
+<script src="/.static/js/draggable.js"></script>
 <script src="/.static/js/watcher.js"></script>
 <script src="/.static/js/embed.js"></script>
 <script src="/.static/js/postingMenu.js"></script>
 <script src="/.static/js/gallery.js"></script>
 <script src="/.static/js/favouriteBoards.js"></script>
-<script src="/.static/js/megud/class.pdu.js" defer></script>
-<script src="/.static/js/megud/class.protocolManager.js" defer></script>
-<script src="/.static/js/megud/protocol.megud.js" defer></script>
-<script src="/.static/js/megud/megud.config.defaults.js" defer></script>
-<script src="/.static/js/megud/megud.lynxchan.js" defer></script>
-<script src="/.static/js/megud/megud.settings.js" defer></script>
-<script src="/.static/js/megud/megud.config.js" defer></script>
-<script src="/.static/js/megud/megud.js" defer></script>
 
 </html>
