--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -39,7 +39,7 @@
   </nav>
 
   <div id="indexWrapper">
-
+<header>
     <div
       id="logoBox"
       class="title">
@@ -47,12 +47,32 @@
         src="/.static/logo.png"
         alt="logo" />
     </div>
-
+</header>
+<center>
     <div
       id="infoBox"
       class="title">
-      <h1><p>117chan</p></h1>
+      <h1><p class="nonBoardSubText">117chan</p></h1>
     </div>
+</center>
+
+<center>
+<div class = "tableOutside">
+<h2 class = "table_h2">Boards</h2>
+<p><u>Safe For Work</u></p>
+<a href="">test</a>
+
+<h2 class = "table_h2">Welcome to 117Chan</h2>
+<p><b>117chan</b> is an imageboard for male virgins, non-normies, and social outcasts where they can express their feelings, and discuss their lifestyles. 117chan is influenced from similar imageboards such as Wizardchan, Warlockchan, and Virginchan.</p> 
+
+</div>
+</center>
+
+
+
+
+
+
 
     <div
       id="divBoards"
