Worked on several other pages and fixed some bugs.

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -49,31 +49,45 @@
     </div>
 </header>
 <center>
-    <div
-      id="infoBox"
-      class="title">
-      <h1><p class="nonBoardSubText">117chan</p></h1>
-    </div>
+      <h1><p>117chan</p></h1>
+<p class = "nonBoardSubText">At least 117 times better than anything else</p>
 </center>
 
 <center>
 <div class = "tableOutside">
-<h2 class = "table_h2">Boards</h2>
-<p><u>Safe For Work</u></p>
-<a href="">test</a>
+<h2 class = "table_h2">Welcome to 117chan</h2>
+<p><b>117chan</b> is an imageboard for male virgins, non-normies, and social outcasts where they can express their feelings, and discuss their lifestyles. 117chan is influenced from similar imageboards such as Wizardchan, Warlockchan, and Virginchan. Please read the <a href="/.static/globalRules.html">rules</a> and <a href="/.static/faq.html">FAQ</a> before posting.</p>
+</div>
 
-<h2 class = "table_h2">Welcome to 117Chan</h2>
-<p><b>117chan</b> is an imageboard for male virgins, non-normies, and social outcasts where they can express their feelings, and discuss their lifestyles. 117chan is influenced from similar imageboards such as Wizardchan, Warlockchan, and Virginchan.</p> 
+<div class = "tableOutside">
+
+<h2 class = "table_h2">Boards</h2>
+<div class = "boardBox">
+<ol style="list-style-type:none;">
+<li><u>SFW</u></li>
+<li><a href="/a/">Anime & Manga</a></li>
+<li><a href="/meta/">Development and Feedback</a></li>
+<li><a href="/g/">Technology</a></li>
+<li><a href="/v/">Video Games</a></li>
+</ol>
+</div>
+
+<div class = "boardBox">
+<ol style="list-style-type:none;">
+<li><u>NSFW</u></li>
+<li><a href="/pol/">Politics</a></li>
+<li><a href="/b/">Random</a></li>
+<li><a href="/v9k/">Virgin9000</a></li>
+</ol>
+</div>
 
 </div>
+<div class = "tableOutside">
+<h2 class = "table_h2">Stats</h2>
+<p>Get divStats working properly.</p>
+</div>
 </center>
-
-
-
-
-
-
-
+<hr>
     <div
       id="divBoards"
       class="topBoards title"></div>
@@ -89,32 +103,27 @@
       <a
         href="/logs.js"
         class="coloredIcon"
-        id="linkLogs">logs</a>
+        id="linkLogs">Logs</a>
       <span>/</span>
       <a
         href="/graphs.js"
         class="coloredIcon"
-        id="linkGraphs">daily graphs</a>
+        id="linkGraphs">Daily Graphs</a>
       <span>/</span>
       <a
         href="/.static/globalRules.html"
         class="coloredIcon"
-        id="linkGlobalRules">global rules</a>
+        id="linkGlobalRules">Rules</a>
       <span>/</span>
       <a
-        href="/.static/links.html"
+        href="/.static/faq.html"
         class="coloredIcon"
-        id="linkLinks">links</a>
-      <span>/</span>
-      <a
-        href="/.static/about.html"
-        class="coloredIcon"
-        id="linkAbout">about</a>
+        id="linkLinks">FAQ</a>
       <span>/</span>
       <a
         href="/.static/contact.html"
         class="coloredIcon"
-        id="linkContact">contact</a>
+        id="linkContact">Contact</a>
       <span>/</span>
       <a
         class="coloredIcon"
@@ -123,7 +132,7 @@
       <a
         href="/account.js"
         class="coloredIcon"
-        id="linkAccount">account</a>
+        id="linkAccount">Account</a>
       <span>]</span>
     </div>
 
@@ -136,12 +145,13 @@
       <span>/</span> <span>Total media size: <span id="labelTotalSize"></span></span>
       <span>]</span>
     </div>
-
   </div>
 
-  <footer>
-    <span>Copyright © 2018 117chan Development Team.</span>
-  </footer>
+<footer>
+<div class = "footerBar"><a href="/.static/faq.html#faq1">About</a> • <a href="/meta/res/1.html#">Feedback</a> • <a href="/.static/contact.html#legal">Legal</a> • <a href="/.static/contact.html">Contact</a></div>
+<br />
+Copyright © 2018 117chan Development Team.
+</footer>
 
 </body>
 
