--- a/templates/pages/thread.html
+++ b/templates/pages/thread.html
@@ -660,7 +660,7 @@ function toggleBoxes() {
 </script> 
 <footer id="footer">All trademarks and copyrights on this page are owned by their respective parties. Images uploaded are the responsibility of the Poster. Comments are owned by the Poster.
 <br />
-<div class = "footerBar"><a href="/.static/about.html">About</a> • <a href="/meta/res/1.html#">Feedback</a> • <a href="/.static/legal.html">Legal</a> • <a href="/.static/contact.html">Contact</a></div>
+<div class = "footerBar"><a href="/.static/faq.html#faq1">About</a> • <a href="/meta/res/1.html#">Feedback</a> • <a href="/.static/contact.html#legal">Legal</a> • <a href="/.static/contact.html">Contact</a></div>
 </footer>
 </body>
 
