--- a/static/css/global.css
+++ b/static/css/global.css
@@ -578,3 +578,8 @@ div.tableOutside p {
   padding-bottom: 25px;
   margin-top: -15px;
 }
+
+.boardBox {
+  display: inline-block;
+  vertical-align: top;
+}
