--- a/templates/pages/boardManagement.html
+++ b/templates/pages/boardManagement.html
@@ -21,16 +21,16 @@
     <span id="navLinkSpan"> <span>[</span> <a
         href="/"
         class="coloredIcon"
-        id="navLinkHome">home</a> <span>/</span> <a
+        id="navLinkHome">Home</a> <span>/</span> <a
         href="/boards.js"
         class="coloredIcon"
-        id="navBoardList">boards</a> <span>/</span> <a
+        id="navBoardList">Boards</a> <span>/</span> <a
         href="/overboard"
         class="coloredIcon"
-        id="navOverboard">overboard</a> <span>/</span> <a
+        id="navOverboard">Overboard</a> <span>/</span> <a
         href="/.static/posting.html"
         class="coloredIcon"
-        id="navPosting">help</a> <span>]</span>
+        id="navPosting">Help</a> <span>]</span>
     </span> <span id="navBoardsSpan"> </span> <span id="navOptionsSpan"> </span>
   </nav>
 
