--- a/templates/pages/catalog.html
+++ b/templates/pages/catalog.html
@@ -318,7 +318,7 @@
 
 <footer id="footer">All trademarks and copyrights on this page are owned by their respective parties. Images uploaded are the responsibility of the Poster. Comments are owned by the Poster.
 <br />
-<div class = "footerBar"><a href="/.static/about.html">About</a> • <a href="/meta/">Feedback</a> • <a href="/.static/legal.html">Legal</a> • <a href="/.static/contact.html">Contact</a></div>
+<div class = "footerBar"><a href="/.static/faq.html#faq1">About</a> • <a href="/meta/">Feedback</a> • <a href="/.static/contact.html#legal">Legal</a> • <a href="/.static/contact.html">Contact</a></div>
 </footer>
 
 </body>
