--- a/templates/pages/boards.html
+++ b/templates/pages/boards.html
@@ -27,9 +27,9 @@
         class="coloredIcon"
         id="linkOverboard">Overboard</a> <span>/</span> <a id="linkSfwOver">Overboard
         SFW</a> <span>/</span> <a
-        href="/.static/posting.html"
+        href="/.static/faq.html"
         class="coloredIcon"
-        id="navPosting">Help</a> <span>]</span>
+        id="navPosting">FAQ</a> <span>]</span>
     </span> <span id="navBoardsSpan"> </span> <span id="navOptionsSpan"> </span>
   </nav>
 
