--- a/templates/pages/catalog.html
+++ b/templates/pages/catalog.html
@@ -47,9 +47,9 @@
         href="/overboard"
         class="coloredIcon"
         id="navOverboard">Overboard</a> <span>/</span> <a
-        href="/.static/posting.html"
+        href="/.static/faq.html"
         class="coloredIcon"
-        id="navPosting">Help</a> <span>]</span>
+        id="navPosting">FAQ</a> <span>]</span>
     </span> <span id="navBoardsSpan"> </span> <span id="navOptionsSpan"> <span>[</span>
       <a
         href="#"
