--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -32,9 +32,9 @@
         href="/overboard"
         class="coloredIcon"
         id="navOverboard">Overboard</a> <span>/</span> <a
-        href="/.static/posting.html"
+        href="/.static/faq.html"
         class="coloredIcon"
-        id="navPosting">Help</a> <span>]</span>
+        id="navPosting">FAQ</a> <span>]</span>
     </span> <span id="navBoardsSpan"> </span> <span id="navOptionsSpan"> </span>
   </nav>
 
@@ -56,7 +56,7 @@
 <center>
 <div class = "tableOutside">
 <h2 class = "table_h2">Welcome to 117chan</h2>
-<p><b>117chan</b> is an imageboard for male virgins, non-normies, and social outcasts where they can express their feelings, and discuss their lifestyles. 117chan is influenced from similar imageboards such as Wizardchan, Warlockchan, and Virginchan. Please read the <a href="/.static/globalRules.html">rules</a> and <a href="/.static/faq.html">FAQ</a> before posting.</p>
+<p><b>117chan</b> (also known as <b>Incelchan</b>, or <b>RobotChan</b>) is an imageboard for male virgins, non-normies, and social outcasts where they can express their feelings, and discuss their lifestyles. 117chan is influenced from similar imageboards such as Wizardchan, Warlockchan, and Virginchan. Please read the <a href="/.static/globalRules.html">rules</a> and <a href="/.static/faq.html">FAQ</a> before posting.</p>
 </div>
 
 <div class = "tableOutside">
@@ -84,7 +84,23 @@
 </div>
 <div class = "tableOutside">
 <h2 class = "table_h2">Stats</h2>
-<p>Get divStats working properly.</p>
+<div id="divStats">
+<div id="statBox">
+      <span><b>Total posts:</b> <span id="labelTotalPosts"></span>
+</div>
+<div id="statBox">
+      <span><b>Total boards:</b> <span id="labelTotalBoards"></span>
+</div>
+<div id="statBox">
+      <span><b>Total media size:</b> <span id="labelTotalSize"></span>
+</div>
+<div class="unusedStats">
+      <span>Posts in last hour: <span id="labelTotalPPH"></span>
+      <span>Media files stored: <span id="labelTotalFiles"></span>
+      <span>Unique recent IPs: <span id="labelTotalIps"></span>
+</div>
+    </div>
+  </div>
 </div>
 </center>
 <hr>
@@ -136,16 +152,7 @@
       <span>]</span>
     </div>
 
-    <div id="divStats">
-      <span>[</span> <span>Total posts: <span id="labelTotalPosts"></span></span>
-      <span>/</span> <span>Posts in last hour: <span id="labelTotalPPH"></span></span>
-      <span>/</span> <span>Unique recent IPs: <span id="labelTotalIps"></span></span>
-      <span>/</span> <span>Total boards: <span id="labelTotalBoards"></span></span>
-      <span>/</span> <span>Media files stored: <span id="labelTotalFiles"></span></span>
-      <span>/</span> <span>Total media size: <span id="labelTotalSize"></span></span>
-      <span>]</span>
-    </div>
-  </div>
+
 
 <footer>
 <div class = "footerBar"><a href="/.static/faq.html#faq1">About</a> • <a href="/meta/res/1.html#">Feedback</a> • <a href="/.static/contact.html#legal">Legal</a> • <a href="/.static/contact.html">Contact</a></div>
