--- a/templates/pages/rules.html
+++ b/templates/pages/rules.html
@@ -23,9 +23,9 @@
         href="/overboard"
         class="coloredIcon"
         id="navOverboard">overboard</a> <span>/</span> <a
-        href="/.static/posting.html"
+        href="/.static/faq.html"
         class="coloredIcon"
-        id="navPosting">help</a> <span>]</span>
+        id="navPosting">FAQ</a> <span>]</span>
     </span> <span id="navBoardsSpan"> </span> <span id="navOptionsSpan"> </span>
   </nav>
 
