--- a/templates/pages/boards.html
+++ b/templates/pages/boards.html
@@ -106,7 +106,14 @@
     </div>
 
   </div>
+<hr>
 
+<footer>
+<div class = "footerBar"><a href="/.static/faq.html#faq1">About</a> • <a href="/meta/res/1.html#">Feedback</a> • <a href="/.static/contact.html#legal">Legal</a> • <a href="/.static/contact.html">Contact</a></div>
+<br />
+Copyright © 2018 117chan Development Team.
+</footer>
+</center>
 </body>
 
 <script src="/.static/js/settings.js"></script>
