--- a/templates/pages/globalSettings.html
+++ b/templates/pages/globalSettings.html
@@ -702,13 +702,11 @@
         <a href="https://gitgud.io/LynxChan/LynxChan/tree/master/src/be">here</a>
       </p>
     </fieldset>
-
-
-
   </div>
 
 </body>
 
+<script src="/.static/js/globalAnnouncement.js"></script>
 <script src="/.static/js/settings.js"></script>
 <script src="/.static/js/api.js"></script>
 <script src="/.static/js/globalSettings.js"></script>
