--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,7 +1,7 @@
 /*Elements exclusive to the front-page*/
 #indexWrapper {
   width: 80%;
-  margin: 2em auto;
+  margin: 2em auto auto auto;
 }
 
 #logoBox {
