--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -51,6 +51,7 @@
 <center>
       <h1><p>117chan</p></h1>
 <p class = "nonBoardSubText">At least 117 times better than anything else</p>
+
 </center>
 
 <center>
@@ -102,8 +103,21 @@
     </div>
   </div>
 </div>
+
+<div class = "linkBoxes">
+<ul>
+<li class = "first"><a href="/">Home</a></li>
+<li><a href="/.static/faq.html">FAQ</a></li>
+<li><a href="/.static/globalRules.html">Rules</a></li>
+<li><a href="/.static/contact.html">Contact</a></li>
+<li><a href="/logs.js">Logs</a></li>
+<li><a href="/graphs.js">Daily Graphs</a></li>
+<li><a href="/account.js">Account</a></li>
+<ul>
+</div>
+
 </center>
-<hr>
+
     <div
       id="divBoards"
       class="topBoards title"></div>
@@ -152,8 +166,6 @@
       <span>]</span>
     </div>
 
-
-
 <footer>
 <div class = "footerBar"><a href="/.static/faq.html#faq1">About</a> • <a href="/meta/res/1.html#">Feedback</a> • <a href="/.static/contact.html#legal">Legal</a> • <a href="/.static/contact.html">Contact</a></div>
 <br />
@@ -162,6 +174,7 @@ Copyright © 2018 117chan Development Team.
 
 </body>
 
+<script src="/.static/js/iff.js"></script>
 <script src="/.static/js/settings.js"></script>
 <script src="/.static/js/api.js"></script>
 <script src="/.static/js/themes.js"></script>
