Added random quote feature to the home page!

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -50,7 +50,7 @@
 </header>
 <center>
       <h1><p>117chan</p></h1>
-<p class = "nonBoardSubText">At least 117 times better than anything else</p>
+<p id="randomQuote" class="nonBoardSubText"></p>
 
 </center>
 
@@ -174,12 +174,11 @@ Copyright © 2018 117chan Development Team.
 
 </body>
 
-<script src="/.static/js/iff.js"></script>
 <script src="/.static/js/settings.js"></script>
 <script src="/.static/js/api.js"></script>
 <script src="/.static/js/themes.js"></script>
 <script src="/.static/js/draggable.js"></script>
 <script src="/.static/js/watcher.js"></script>
 <script src="/.static/js/favouriteBoards.js"></script>
-
+<script src="/.static/js/randomQuote.js"></script>
 </html>
