Added a global announcement feature to announce to all pages with the specified div tag. Still needs polish, but works for now.

--- a/templates/pages/board.html
+++ b/templates/pages/board.html
@@ -294,7 +294,14 @@ function displayFunctionTwo() {
 }
 </script> 
 
+
+
+
   <div id="panelMessage">
+    <hr>
+<div class = "bAnnounce">
+<p id="globalAnnouncement"></p>
+</div>
     <hr>
     <div id="divMessage"></div>
     <hr>
@@ -463,5 +470,6 @@ function toggleBoxes() {
 <script src="/.static/js/embed.js"></script>
 <script src="/.static/js/postingMenu.js"></script>
 <script src="/.static/js/favouriteBoards.js"></script>
+<script src="/.static/js/globalAnnouncement.js"></script>
 
 </html>
