--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -52,9 +52,10 @@
       <h1><p>117chan</p></h1>
 <p id="randomQuote" class="nonBoardSubText"></p>
 
-</center>
+<div class = "gAnnounce">
+<p id="globalAnnouncement"></p>
+</div>
 
-<center>
 <div class = "tableOutside">
 <h2 class = "table_h2">Welcome to 117chan</h2>
 <p><b>117chan</b> (also known as <b>Incelchan</b>, or <b>RobotChan</b>) is an imageboard for male virgins, non-normies, and social outcasts where they can express their feelings, and discuss their lifestyles. 117chan is influenced from similar imageboards such as Wizardchan, Warlockchan, and Virginchan. Please read the <a href="/.static/globalRules.html">rules</a> and <a href="/.static/faq.html">FAQ</a> before posting.</p>
@@ -181,4 +182,5 @@ Copyright © 2018 117chan Development Team.
 <script src="/.static/js/watcher.js"></script>
 <script src="/.static/js/favouriteBoards.js"></script>
 <script src="/.static/js/randomQuote.js"></script>
+<script src="/.static/js/globalAnnouncement.js"></script>
 </html>
