--- a/static/css/global.css
+++ b/static/css/global.css
@@ -649,3 +649,23 @@ div.tableOutside p {
 .linkBoxes a {
   color: #c5c8c6;
 }
+
+.bAnnounce, .gAnnounce {
+  font-family: arial, helvetica, sans-serif;
+  font-size: 10pt;
+  color: #FC0000;
+  font-weight: bold;
+  text-align: center;
+}
+
+.gAnnounce {
+  max-width: 700px;
+  margin-bottom: -10px;
+  overflow-wrap: break-word;
+}
+
+.bAnnounce {
+  color: #FC0000;
+  font-size: 10pt;
+}
+
